chore: add npm-check-updates config and script 🔧
Added npm-check-updates configuration and script to project for easier dependency management.

- Created `.ncurc.js` for custom dependency update filtering
- Added `check-updates` script to `package.json`
- Installed `npm-check-updates` as a dev dependency

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:unit": "vitest",
     "test": "npm run test:unit -- --run",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "check-updates": "npm-check-updates --cache"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
@@ -38,6 +39,7 @@
     "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
+    "npm-check-updates": "17.1.18",
     "playwright": "^1.51.1",
     "storybook": "^8.6.12",
     "svelte": "^5.0.0",
