chore: add Biome.js configuration and formatter scripts 🧹
Integrated Biome.js for code formatting and linting with configuration:

- Added `biome.json` configuration file with comprehensive settings
- Updated `package.json` with Biome.js formatter scripts
- Installed `@biomejs/biome` as a dev dependency
- Configured file ignore patterns
- Set up JavaScript and formatting rules

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "test": "npm run test:unit -- --run",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "check-updates": "npm-check-updates --cache"
+    "check-updates": "npm-check-updates --cache",
+    "format": "biome format --write .",
+    "format:check": "biome format ."
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@chromatic-com/storybook": "^3",
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
