chore: run biome formatter

--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
     "vitest": "^3.0.0"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ]
+    "onlyBuiltDependencies": ["esbuild"]
   }
 }
