--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@chromatic-com/storybook": "^3",
-    "@eslint/compat": "^1.2.5",
-    "@eslint/js": "^9.18.0",
+    "@eslint/compat": "^1.2.8",
+    "@eslint/js": "^9.24.0",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-svelte-csf": "^5.0.0-next.0",
     "@storybook/blocks": "^8.6.12",
@@ -31,28 +31,31 @@
     "@storybook/svelte": "^8.6.12",
     "@storybook/sveltekit": "^8.6.12",
     "@storybook/test": "^8.6.12",
-    "@sveltejs/adapter-auto": "^4.0.0",
-    "@sveltejs/kit": "^2.16.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@sveltejs/adapter-auto": "^6.0.0",
+    "@sveltejs/kit": "^2.20.5",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/svelte": "^5.2.4",
+    "@testing-library/svelte": "^5.2.7",
     "@vitest/browser": "3.1.1",
     "@vitest/coverage-v8": "3.1.1",
-    "eslint": "^9.18.0",
-    "eslint-plugin-svelte": "^3.0.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-svelte": "^3.5.1",
     "globals": "^16.0.0",
-    "jsdom": "^26.0.0",
+    "jsdom": "^26.1.0",
     "npm-check-updates": "17.1.18",
     "playwright": "^1.51.1",
     "storybook": "^8.6.12",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.2.5",
-    "vitest": "^3.0.0"
+    "svelte": "^5.26.2",
+    "svelte-check": "^4.1.6",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1",
+    "vite": "^6.2.6",
+    "vitest": "^3.1.1"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "esbuild"
+    ]
   }
 }
