--- a/package.json
+++ b/package.json
@@ -11,51 +11,60 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
-    "test:unit": "vitest",
-    "test": "npm run test:unit -- --run",
+    "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "check-updates": "npm-check-updates --cache",
     "format": "biome format --write .",
-    "format:check": "biome format ."
+    "format:check": "biome format .",
+    "fmt": "$npm_execpath run format",
+    "fmt:check": "$npm_execpath run format:check",
+    "tidy": "$npm_execpath run format; $npm_execpath run lint",
+    "knip": "knip"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@chromatic-com/storybook": "^3",
-    "@eslint/compat": "^1.2.8",
-    "@eslint/js": "^9.24.0",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-svelte-csf": "^5.0.0-next.0",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/experimental-addon-test": "^8.6.12",
-    "@storybook/svelte": "^8.6.12",
-    "@storybook/sveltekit": "^8.6.12",
-    "@storybook/test": "^8.6.12",
-    "@sveltejs/adapter-auto": "^6.0.0",
-    "@sveltejs/kit": "^2.20.5",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/svelte": "^5.2.7",
-    "@vitest/browser": "3.1.1",
-    "@vitest/coverage-v8": "3.1.1",
-    "eslint": "^9.24.0",
-    "eslint-plugin-svelte": "^3.5.1",
-    "globals": "^16.0.0",
-    "jsdom": "^26.1.0",
+    "@chromatic-com/storybook": "3",
+    "@eslint/compat": "1.2.8",
+    "@eslint/js": "9.24.0",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-svelte-csf": "5.0.0-next.28",
+    "@storybook/svelte": "8.6.12",
+    "@storybook/sveltekit": "8.6.12",
+    "@sveltejs/adapter-auto": "6.0.0",
+    "@sveltejs/kit": "2.20.5",
+    "@sveltejs/vite-plugin-svelte": "5.0.3",
+    "eslint": "9.24.0",
+    "eslint-plugin-svelte": "3.5.1",
+    "globals": "16.0.0",
+    "knip": "5.50.2",
     "npm-check-updates": "17.1.18",
-    "playwright": "^1.51.1",
-    "storybook": "^8.6.12",
-    "svelte": "^5.26.2",
-    "svelte-check": "^4.1.6",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.1",
-    "vite": "^6.2.6",
-    "vitest": "^3.1.1"
+    "storybook": "8.6.12",
+    "svelte": "5.26.2",
+    "svelte-check": "4.1.6",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.29.1",
+    "vite": "6.2.6",
+    "vitest": "3.1.1"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "@biomejs/biome",
-      "esbuild"
-    ]
+    "onlyBuiltDependencies": ["@biomejs/biome", "esbuild"]
+  },
+  "knip": {
+    "svelte": {
+      "entry": [
+        "./src/routes/**/+{layout,page,server,error}{,.server}.{svelte,ts}",
+        "./svelte.config.js"
+      ],
+      "project": ["./src/**/*.ts"]
+    },
+    "paths": {
+      "$lib/*": ["src/lib/*"],
+      "$app/*": ["node_modules/@sveltejs/kit/src/runtime/app/*"],
+      "$env/*": ["node_modules/@sveltejs/kit/src/runtime/env/*"]
+    },
+    "ignore": [".ncurc.js"],
+    "ignoreDependencies": [],
+    "ignoreExportsUsedInFile": true
   }
 }
