--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "start": "node build",
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
@@ -26,29 +27,33 @@
     "@biomejs/biome": "1.9.4",
     "@chromatic-com/storybook": "3",
     "@eslint/compat": "1.2.8",
-    "@eslint/js": "9.24.0",
+    "@eslint/js": "9.25.0",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-svelte-csf": "5.0.0-next.28",
     "@storybook/svelte": "8.6.12",
     "@storybook/sveltekit": "8.6.12",
-    "@sveltejs/adapter-auto": "6.0.0",
-    "@sveltejs/kit": "2.20.5",
+    "@sveltejs/adapter-node": "5.2.12",
+    "@sveltejs/kit": "2.20.7",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
-    "eslint": "9.24.0",
+    "eslint": "9.25.0",
     "eslint-plugin-svelte": "3.5.1",
     "globals": "16.0.0",
-    "knip": "5.50.2",
-    "npm-check-updates": "17.1.18",
+    "knip": "5.50.5",
+    "npm-check-updates": "18.0.0",
     "storybook": "8.6.12",
-    "svelte": "5.26.2",
+    "svelte": "5.28.1",
     "svelte-check": "4.1.6",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.29.1",
-    "vite": "6.2.6",
-    "vitest": "3.1.1"
+    "typescript-eslint": "8.30.1",
+    "vite": "6.3.2",
+    "vitest": "3.1.2"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "svelte-preprocess"]
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "esbuild",
+      "svelte-preprocess"
+    ]
   },
   "knip": {
     "svelte": {
@@ -56,14 +61,24 @@
         "./src/routes/**/+{layout,page,server,error}{,.server}.{svelte,ts}",
         "./svelte.config.js"
       ],
-      "project": ["./src/**/*.ts"]
+      "project": [
+        "./src/**/*.ts"
+      ]
     },
     "paths": {
-      "$lib/*": ["src/lib/*"],
-      "$app/*": ["node_modules/@sveltejs/kit/src/runtime/app/*"],
-      "$env/*": ["node_modules/@sveltejs/kit/src/runtime/env/*"]
+      "$lib/*": [
+        "src/lib/*"
+      ],
+      "$app/*": [
+        "node_modules/@sveltejs/kit/src/runtime/app/*"
+      ],
+      "$env/*": [
+        "node_modules/@sveltejs/kit/src/runtime/env/*"
+      ]
     },
-    "ignore": [".ncurc.js"],
+    "ignore": [
+      ".ncurc.js"
+    ],
     "ignoreDependencies": [],
     "ignoreExportsUsedInFile": true
   },
