--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@chromatic-com/storybook": "3",
     "@eslint/compat": "1.2.8",
     "@eslint/js": "9.25.0",
+    "@flydotio/dockerfile": "0.7.10",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-svelte-csf": "5.0.0-next.28",
     "@storybook/svelte": "8.6.12",
