chore: Update database name in environment example file 🔧
Updated the `.env.example` file to reflect a new database name:

- Changed main database name from 'bowline' to 'quenta'
- Updated shadow database name from 'bowline_shadow' to 'quenta_shadow'
- Maintained the same connection details and structure

--- a/.env.example
+++ b/.env.example
@@ -16,12 +16,12 @@ POSTGRES_PASSWORD=password
 # https://github.com/graphile/migrate#getting-started
 
 # This is the main database URL that is used by the app
-DATABASE_URL=postgres://postgres:password@172.17.0.1:5432/bowline
+DATABASE_URL=postgres://postgres:password@172.17.0.1:5432/quenta
 
 # This is the "shadow" database, used by Graphile-Migrate to test the
 # consistency of the migrations. It is used for the "commit", "uncommit" and
 # "reset" commands (which are only used during development).
-SHADOW_DATABASE_URL=postgres://postgres:password@172.17.0.1:5432/bowline_shadow
+SHADOW_DATABASE_URL=postgres://postgres:password@172.17.0.1:5432/quenta_shadow
 
 # This is the "root" database URL which should be a superuser account
 # connection to any other database (most PostgreSQL servers have a default
