--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@sveltejs/adapter-node": "5.2.12",
     "@sveltejs/kit": "2.20.7",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
+    "@types/pg": "8.11.14",
     "env-cmd": "10.1.0",
     "eslint": "9.25.0",
     "eslint-plugin-svelte": "3.5.1",
@@ -73,6 +74,7 @@
     "ignoreExportsUsedInFile": true
   },
   "dependencies": {
-    "modern-normalize": "^3.0.1"
+    "modern-normalize": "^3.0.1",
+    "pg": "8.15.6"
   }
 }
