--- a/package.json
+++ b/package.json
@@ -26,35 +26,39 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@chromatic-com/storybook": "3",
-    "@eslint/compat": "1.2.8",
-    "@eslint/js": "9.25.0",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@eslint/compat": "1.2.9",
+    "@eslint/js": "9.26.0",
     "@flydotio/dockerfile": "0.7.10",
     "@storybook/addon-essentials": "8.6.12",
-    "@storybook/addon-svelte-csf": "5.0.0-next.28",
+    "@storybook/addon-svelte-csf": "5.0.0",
     "@storybook/svelte": "8.6.12",
     "@storybook/sveltekit": "8.6.12",
     "@sveltejs/adapter-node": "5.2.12",
-    "@sveltejs/kit": "2.20.7",
+    "@sveltejs/kit": "2.20.8",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
-    "@types/pg": "8.11.14",
+    "@types/pg": "8.15.0",
     "env-cmd": "10.1.0",
-    "eslint": "9.25.0",
+    "eslint": "9.26.0",
     "eslint-plugin-svelte": "3.5.1",
-    "globals": "16.0.0",
+    "globals": "16.1.0",
     "graphile-migrate": "1.4.1",
-    "knip": "5.50.5",
-    "npm-check-updates": "18.0.0",
+    "knip": "5.55.1",
+    "npm-check-updates": "18.0.1",
     "storybook": "8.6.12",
-    "svelte": "5.28.1",
-    "svelte-check": "4.1.6",
+    "svelte": "5.28.2",
+    "svelte-check": "4.1.7",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.30.1",
-    "vite": "6.3.2",
-    "vitest": "3.1.2"
+    "typescript-eslint": "8.32.0",
+    "vite": "6.3.5",
+    "vitest": "3.1.3"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "svelte-preprocess"]
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "esbuild",
+      "svelte-preprocess"
+    ]
   },
   "knip": {
     "svelte": {
@@ -62,15 +66,27 @@
         "./src/routes/**/+{layout,page,server,error}{,.server}.{svelte,ts}",
         "./svelte.config.js"
       ],
-      "project": ["./src/**/*.ts"]
+      "project": [
+        "./src/**/*.ts"
+      ]
     },
     "paths": {
-      "$lib/*": ["src/lib/*"],
-      "$app/*": ["node_modules/@sveltejs/kit/src/runtime/app/*"],
-      "$env/*": ["node_modules/@sveltejs/kit/src/runtime/env/*"]
+      "$lib/*": [
+        "src/lib/*"
+      ],
+      "$app/*": [
+        "node_modules/@sveltejs/kit/src/runtime/app/*"
+      ],
+      "$env/*": [
+        "node_modules/@sveltejs/kit/src/runtime/env/*"
+      ]
     },
-    "ignore": [".ncurc.js"],
-    "ignoreDependencies": ["graphile-migrate"],
+    "ignore": [
+      ".ncurc.js"
+    ],
+    "ignoreDependencies": [
+      "graphile-migrate"
+    ],
     "ignoreExportsUsedInFile": true
   },
   "dependencies": {
