chore: streamline Dockerfile and add start script 🧹
This commit introduces several enhancements to the Dockerfile and accompanying scripts, streamlining the build process and improving image efficiency.

- Removed unnecessary build dependencies from the Dockerfile to reduce image size.
- Added a new script (`docker-app-start.sh`) to handle database migrations and start the application, improving clarity and maintainability.
- Adjusted the memory allocation for the Fly.io configuration to optimize resource usage.
- Cleaned up the package.json formatting for better readability without changing the functionality.

These changes aim to create a cleaner, more efficient containerized environment for application deployment, enhancing both performance and maintainability.

--- a/package.json
+++ b/package.json
@@ -54,11 +54,7 @@
     "vitest": "3.1.3"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "@biomejs/biome",
-      "esbuild",
-      "svelte-preprocess"
-    ]
+    "onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "svelte-preprocess"]
   },
   "knip": {
     "svelte": {
@@ -66,27 +62,15 @@
         "./src/routes/**/+{layout,page,server,error}{,.server}.{svelte,ts}",
         "./svelte.config.js"
       ],
-      "project": [
-        "./src/**/*.ts"
-      ]
+      "project": ["./src/**/*.ts"]
     },
     "paths": {
-      "$lib/*": [
-        "src/lib/*"
-      ],
-      "$app/*": [
-        "node_modules/@sveltejs/kit/src/runtime/app/*"
-      ],
-      "$env/*": [
-        "node_modules/@sveltejs/kit/src/runtime/env/*"
-      ]
+      "$lib/*": ["src/lib/*"],
+      "$app/*": ["node_modules/@sveltejs/kit/src/runtime/app/*"],
+      "$env/*": ["node_modules/@sveltejs/kit/src/runtime/env/*"]
     },
-    "ignore": [
-      ".ncurc.js"
-    ],
-    "ignoreDependencies": [
-      "graphile-migrate"
-    ],
+    "ignore": [".ncurc.js"],
+    "ignoreDependencies": ["graphile-migrate"],
     "ignoreExportsUsedInFile": true
   },
   "dependencies": {
