feat: update Docker setup and dependency management 🐳
This commit enhances the Docker setup and updates the project dependencies for better maintainability. These changes improve how the application is run in a containerized environment and ensure that all necessary components are properly documented and accessible.

- Updated the Dockerfile to use ENTRYPOINT instead of CMD for better control over command execution.
- Added new sections in README.md to provide clear instructions on building and running the Docker image locally.
- Changed permission of `docker-app-start.sh` to make it executable.
- Updated package.json to clean up the dependencies section and ensure proper package versions. 

These modifications aim to streamline the development process and enhance the clarity of operational instructions for new developers.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "knip": "knip",
     "graphile-migrate": "env-cmd --silent graphile-migrate --config ./gmrc.cjs"
   },
+  "dependencies": {
+    "graphile-migrate": "1.4.1",
+    "modern-normalize": "3.0.1",
+    "pg": "8.15.6"
+  },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "3.2.6",
     "@eslint/compat": "1.2.9",
     "@eslint/js": "9.26.0",
     "@flydotio/dockerfile": "0.7.10",
@@ -42,7 +47,6 @@
     "eslint": "9.26.0",
     "eslint-plugin-svelte": "3.5.1",
     "globals": "16.1.0",
-    "graphile-migrate": "1.4.1",
     "knip": "5.55.1",
     "npm-check-updates": "18.0.1",
     "storybook": "8.6.12",
@@ -72,9 +76,5 @@
     "ignore": [".ncurc.js"],
     "ignoreDependencies": ["graphile-migrate"],
     "ignoreExportsUsedInFile": true
-  },
-  "dependencies": {
-    "modern-normalize": "^3.0.1",
-    "pg": "8.15.6"
   }
 }
