--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "kanel": "env-cmd -x kanel --database=\\$DATABASE_URL"
   },
   "dependencies": {
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "graphile-migrate": "1.4.1",
     "kysely": "0.28.2",
     "modern-normalize": "3.0.1",
