feat: Add Lucia google oauth

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ SHADOW_DATABASE_URL=postgres://postgres:password@172.17.0.1:5432/quenta_shadow
 # database called postgres which is a good choice for this).
 # This is needed to drop and recreate the main and shadow databases.
 ROOT_DATABASE_URL=postgres://postgres:password@172.17.0.1:5432/postgres
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
