fix: google oauth for prod

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ ROOT_DATABASE_URL=postgres://postgres:password@172.17.0.1:5432/postgres
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+ORIGIN=http://localhost:5173
